--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,12 @@
 <div class="container-home">
-    
+    <div>
+        <input type="text" 
+            [formControl]="searchControl"
+            (keyup)="keyUpEnter($event)"
+        >
+        <button
+            [disabled]="!searchControl.valid"
+            (click)="search()"
+        >Pesquisar</button>
+    </div>
 </div>
