--- a/src/app/components/small-card/small-card.component.scss
+++ b/src/app/components/small-card/small-card.component.scss
@@ -1,14 +1,88 @@
 .small-card-container {
-    font-size: 2rem;
-    border: 1px solid #fff;
-    width: 200px;
+    border: 1px solid #FFFFFF90;
+    box-shadow: 0 0 15px #FFFFFF90;
+
+    border-radius: 10% 50% 10% 10% / 20% 50% 20% 20%;
+
+    padding: 1.5rem;
     margin: 3px 10px;
 
-    .left-small-card {
+    width: 35rem;
+
+    display: grid;
+    gap: 2rem;
+
+    background: linear-gradient(to right, #362A84, #6b46c8);
+
+    p {
+        font-size: 1.2rem;
+
+        &::first-letter {
+            text-transform: uppercase;
+        }
+    }
+
+    .header {
+        grid-area: 1 / 1 / 2 / 3;
+        text-align: center;
+
         p {
+            font-size: 1.7rem;
+            font-weight: 700;
+        }
+    }
+
+    .left-small-card {
+        grid-area: 2 / 1 / 3 / 2;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        h2 {
+            text-align: center;
+            font-size: 5rem;
+        }
+
+        div {
+            display: flex;
+            gap: 2rem;
+
+            p {
+                font-style: italic;
+            }
+        }
+
+        p {
+            text-align: center;
+
             span {
                 text-transform: uppercase;
             }
+        }
+    }
+
+    .right-small-card {
+        grid-area: 2 / 2 / 3 / 3;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+
+        img {
+            width: 9rem;
+            filter: drop-shadow(2px 2px 15px #FFFFFF90);
+        }
+    }
+
+    .footer {
+        display: flex;
+        justify-content: space-around;
+        grid-area: 3 / 1 / 4 /3;
+
+        p {
+            font-size: 1.2rem;
+            font-weight: 700;
         }
     }
 }
